@@ -13,6 +13,7 @@ Introduces *Emacs 29.1* features support.
   of tags.
 - New optional constant ~yet-org-noob~.
 - =org-mode-map= keybinding =C-c o l= to call =org-store-link=.
+- Function to unfill elements ~M-x yet-org-unfill~ (=C-M-q=).
 
 *** Changed
 - Configure more of GUI elements in ~early-init.el~ for Emacs startup stage.
